src/main/java/com/example/tripit/error/GlobalExceptionHandler.java
package com.example.tripit.error;

import lombok.extern.slf4j.Slf4j;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.ResponseBody;
import org.springframework.web.bind.annotation.RestControllerAdvice;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

@Slf4j
@RestControllerAdvice
public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {


    @ExceptionHandler(CustomException.class)
    @ResponseBody
    public ResponseEntity<ErrorResponse> handleCustomException(CustomException ex) {
        // CustomException으로부터 필요한 정보를 추출하여 CustomErrorResponse 생성
        ErrorResponse errorResponse = new ErrorResponse(
                ex.getStatus(),
                ex.getCode(),
                ex.getMessage(),
                ex.getErrors()
        );

        logger.info("Custom Exception");

        // ResponseEntity 반환
        return new ResponseEntity<>(errorResponse, HttpStatus.valueOf(ex.getStatus()));
    }

}
